--- a/menu.html
+++ b/menu.html
@@ -31,10 +31,16 @@
             <div class="collapse navbar-collapse " id="myNavbar">
 
                 <ul class="nav navbar-nav navbar-right ">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="#">Promotions</a></li>
+                    <!-- experimental menu bar -->
+                    <li class="active"><a href="menu.html">Menu</a></li>
+                    <li><a href="promotions.html">Promotions</a></li>
                     <li><a href="contact_us.html">Contact Us</a></li>
+                    
+                    <!-- original menu bar -->
+                    <!-- <li class="active"><a href="#">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="promotions.html">Promotions</a></li>
+                    <li><a href="contact_us.html">Contact Us</a></li> -->
                 </ul>
 
             </div>
