--- a/contact_us.html
+++ b/contact_us.html
@@ -28,10 +28,9 @@
             </div>
             <div class="collapse navbar-collapse " id="myNavbar">
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="menu.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li class="divider-vertical"></li>
-                    <li><a href="#">Promotions</a></li>
+                    <li><a href="promotions.html">Promotions</a></li>
                     <li class="divider-vertical"></li>
                     <li class="active"><a href="contact_us.html">Contact Us</a></li>
                 </ul>
