--- a/menu.html
+++ b/menu.html
@@ -24,18 +24,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-                <a class="navbar-brand" href="#">
-                    <img src="images/Logo.jpg" alt="Chania" class="img-responsive logo">
+                <a class="navbar-brand" href="menu.html">
+                    <img src="images/LOGOANDTITLETRANS.png" alt="Chania" class="img-responsive logo">
                 </a>
             </div>
             <div class="collapse navbar-collapse " id="myNavbar">
 
                 <ul class="nav navbar-nav navbar-right ">
                     <!-- experimental menu bar -->
-                    <li class="active"><a href="menu.html">Menu</a></li>
-                    <li><a href="promotions.html">Promotions</a></li>
-                    <li><a href="contact_us.html">Contact Us</a></li>
-                    
+                    <li class="active"><a href="menu.html"><span class="navFont">Menu</span></a></li>
+                    <li><a href="promotions.html"> <span class="navFont">Promotions </span></a></li>
+                    <li><a href="contact_us.html"> <span class="navFont">Contact Us</span></a></li>
+
                     <!-- original menu bar -->
                     <!-- <li class="active"><a href="#">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
