--- a/promotions.html
+++ b/promotions.html
@@ -22,17 +22,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-                <a class="navbar-brand" href="#">
-                    <img src="images/Logo.jpg" alt="Chania" class="img-responsive logo">
+                <a class="navbar-brand" href="menu.html">
+                    <img src="images/LOGOANDTITLETRANS.png" alt="Chania" class="img-responsive logo">
                 </a>
+
             </div>
             <div class="collapse navbar-collapse " id="myNavbar">
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="menu.html">Menu</a></li>
-                    <li class="divider-vertical"></li>
-                    <li class="active"><a href="promotions.html">Promotions</a></li>
-                    <li class="divider-vertical"></li>
-                    <li><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="menu.html"><span class="navFont">Menu</span></a></li>
+
+                    <li class="active"><a href="promotions.html"><span class="navFont">Promotions</span></a></li>
+
+                    <li><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li>
                 </ul>
 
             </div>
@@ -40,12 +41,14 @@
         </div>
     </div>
 
-    <center><div class="container fMenu bg-2" >
+    <center>
+        <div class="container fMenu bg-2">
 
-        <!-- promotions stuff -->
-        <h3 class="category">Watami's Promotions</h3>
-        <img src="images/coupon.jpg" alt="picture of coupon" style="width:632px;height:240px;" align="middle">
+            <!-- promotions stuff -->
+            <h3 class="category">Watami's Promotions</h3>
+            <img src="images/coupon.jpg" alt="picture of coupon" style="width:632px;height:240px;" align="middle">
 
-    </div></center>
+        </div>
+    </center>
 </body>
     </html>
