--- a/contact_us.html
+++ b/contact_us.html
@@ -22,17 +22,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-                <a class="navbar-brand" href="#">
-                    <img src="images/Logo.jpg" alt="Chania" class="img-responsive logo">
+                <a class="navbar-brand" href="menu.html">
+                    <img src="images/LOGOANDTITLETRANS.png" alt="Chania" class="img-responsive logo">
                 </a>
+
             </div>
             <div class="collapse navbar-collapse " id="myNavbar">
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="menu.html">Menu</a></li>
-                    <li class="divider-vertical"></li>
-                    <li><a href="promotions.html">Promotions</a></li>
-                    <li class="divider-vertical"></li>
-                    <li class="active"><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="menu.html"><span class="navFont">Menu</span></a></li>
+                    <li><a href="promotions.html"><span class="navFont">Promotions</span></a></li>
+                    <li class="active"><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li>
                 </ul>
 
             </div>
