--- a/menu.html
+++ b/menu.html
@@ -69,7 +69,7 @@
                     <div class="container-fluid">
                         <ol style="list-style-type:none">
                             <li>Edamame (Boiled Soy Bean) <span class="price">$3.49</span></li>
-                            <li>Fried Tofu (3 Pcs)) <span class="price">$3.99 </span></li>
+                            <li>Fried Tofu (3 Pcs) <span class="price">$3.99 </span></li>
                             <li>Gyoza (6 Pcs) <span class="price">$4.99 </span></li>
                             <li>Egg Roll (4Pcs) <span class="price">$4.99 </span></li>
                             <li>Skewered Chicken <span class="price">$4.99 </span></li>
