--- a/menu.html
+++ b/menu.html
@@ -50,6 +50,9 @@
 
     <!-- Container for Menu -->
     <div class="container fMenu bg-2">
+        
+        <img src="images/coupon.jpg" alt="picture of coupon" style="width:900px;height:400px;" align="middle">
+        
         <div class="container-fluid">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Appetizer/Salad</a></li>
