Added smaller logo for lower resolution
Even better than the last time

--- a/menu.html
+++ b/menu.html
@@ -26,9 +26,10 @@
           </button>
                 <a class="navbar-brand" href="menu.html">
                     
-<picture class="logo">
-    <source media="(min-width: 1329px)" srcset="images/LOGOANDTITLETRANS.png" class="img-reponsive">
-    <img src="images/LOGO.png" alt="Logo" class="img-responsive">
+<picture class="logo" >
+    <source media="(min-width: 1351px)" srcset="images/LOGOANDTITLETRANS.png" class="img-reponsive">
+    <source media="(min-width: 766px)" srcset="images/LOGO.png" class="img-reponsive">
+    <img src="images/LOGOSmall.png" alt="LOGOSmall.png" class="img-responsive ">
 </picture>
                 
                 </a>
