--- a/contact_us.html
+++ b/contact_us.html
@@ -26,10 +26,10 @@
                 <a class="navbar-brand" href="menu.html">
 
                     <picture class="logo">
-                        <source media="(min-width: 1329px)" srcset="images/LOGOANDTITLETRANS.png" class="img-reponsive">
-                        <img src="images/LOGO.png" alt="Logo" class="img-responsive">
+                        <source media="(min-width: 1351px)" srcset="images/LOGOANDTITLETRANS.png" class="img-reponsive">
+                        <source media="(min-width: 766px)" srcset="images/LOGO.png" class="img-reponsive">
+                        <img src="images/LOGOSmall.png" alt="LOGOSmall.png" class="img-responsive ">
                     </picture>
-
 
                 </a>
 
@@ -76,7 +76,6 @@
                         information.open(map, marker);
                     });
                 }
-
             </script>
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2RNoG-UnS4ozW0byE983x28PG9b0POsw&callback=myMap"></script>
 
