Replaced old logo with a clearer version

--- a/contact_us.html
+++ b/contact_us.html
@@ -26,7 +26,7 @@
                 <a class="navbar-brand" href="menu.html">
 
                     <picture class="logo">
-                        <source media="(min-width: 1351px)" srcset="images/LOGOANDTITLETRANS.png" class="img-reponsive">
+                        <source media="(min-width: 1513px)" srcset="images/WLogo2.png" class="img-reponsive">
                         <source media="(min-width: 766px)" srcset="images/LOGO.png" class="img-reponsive">
                         <img src="images/LOGOSmall.png" alt="LOGOSmall.png" class="img-responsive ">
                     </picture>
