Added image gallary

--- a/promotions.html
+++ b/promotions.html
@@ -52,7 +52,7 @@
 
             <!-- promotions stuff -->
             <h3 class="category">Watami's Promotions</h3>
-            <img src="images/coupon.jpg" alt="picture of coupon" style="width:632px;height:240px;" align="middle">
+            <img src="images/coupon.jpg" alt="picture of coupon" style="width:632px;height:240px;" align="middle" class="">
 
         </div>
     </center>
