--- a/menu.html
+++ b/menu.html
@@ -37,21 +37,23 @@
             <div class="collapse navbar-collapse " id="myNavbar">
 
 
-                <ul class="nav navbar-nav ">
+                <ul class="nav navbar-nav navFont">
                     <!-- experimental menu bar -->
-                    <li class="active"><a href="menu.html"><span class="navFont">Menu</span></a></li>
+                    <!--<li class="active"><a href="menu.html"><span class="navFont">Menu</span></a></li>
                     <li>
                         <a href="promotions.html"> <span class="navFont">Promotions </span></a>
                     </li>
                     <li>
                         <a href="contact_us.html"> <span class="navFont">Contact Us</span></a>
-                    </li>
+                    </li> -->
 
                     <!-- original menu bar -->
-                    <!-- <li class="active"><a href="#">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
+                    
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active"><a href="menu.html">Menu</a></li>
                     <li><a href="promotions.html">Promotions</a></li>
-                    <li><a href="contact_us.html">Contact Us</a></li> -->
+                    <li><a href="contact_us.html">Contact Us</a></li>
+                    
                 </ul>
 
 
