--- a/home.html
+++ b/home.html
@@ -34,12 +34,17 @@
 
             </div>
             <div class="collapse navbar-collapse " id="myNavbar">
-                <ul class="nav navbar-nav ">
-                    <li><a href="menu.html"><span class="navFont">Menu</span></a></li>
+                <ul class="nav navbar-nav navFont">
+                    <!--<li><a href="menu.html"><span class="navFont">Menu</span></a></li>
 
                     <li class="active"><a href="promotions.html"><span class="navFont">Promotions</span></a></li>
 
-                    <li><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li>
+                    <li><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li> -->
+                    
+                    <li class="active"><a href="home.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="promotions.html">Promotions</a></li>
+                    <li><a href="contact_us.html">Contact Us</a></li>
                 </ul>
 
             </div>
