--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
 
                     <li><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li> -->
                     
+                    <!--<li class="active"><a href="home.html">Home</a></li> -->
                     <li class="active"><a href="home.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="promotions.html">Promotions</a></li>
