--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
 
                     <!-- original menu bar -->
 
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="menu.html">Menu</a></li>
                     <li><a href="promotions.html">Promotions</a></li>
                     <li><a href="contact_us.html">Contact Us</a></li>
