--- a/contact_us.html
+++ b/contact_us.html
@@ -53,7 +53,7 @@
                     <li><a href="promotions.html"><span class="navFont">Promotions</span></a></li>
                     <li class="active"><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li> -->
                     
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="promotions.html">Promotions</a></li>
                     <li class="active"><a href="contact_us.html">Contact Us</a></li>
