--- a/promotions.html
+++ b/promotions.html
@@ -41,7 +41,7 @@
 
                     <li><a href="contact_us.html"><span class="navFont">Contact Us</span></a></li> -->
 
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li class="active"><a href="promotions.html">Promotions</a></li>
                     <li><a href="contact_us.html">Contact Us</a></li>
